@@ -1,6 +1,6 @@
 Package: crs
-Version: 0.13-7
-Date: 2010-12-15
+Version: 0.13-8
+Date: 2011-01-29
 Depends: mgcv
 Suggests: np
 Title: Categorical Regression Splines
