@@ -44,6 +44,7 @@ crs(\dots)
     deriv = 0,
     data.return = FALSE,
     prune = FALSE,
+    restarts = 0,
     \dots)
 }
 \arguments{
@@ -143,6 +144,10 @@ crs(\dots)
    cross-validation criterion based upon a modified version of
    \code{\link[MASS]{stepAIC}} (see below for details) }
 
+  \item{restarts}{ integer number of times to restart the process of
+    finding extrema of the cross-validation function for the bandwidths
+    only from different (random) initial points }
+ 
   \item{\dots}{ optional arguments }
   
 }
